--- a/templates/post_list.html
+++ b/templates/post_list.html
@@ -7,25 +7,14 @@
   </head>
   <body>
     <header>
-      <h1><a href="/">Study Blog</a></h1>
+      <h1><a href="">Study Blog</a></h1>
     </header>
+    {% for post in posts %}
     <article>
-      <time datetime="">published: 24.07.2025, 12:14</time>
-      <h2><a href="">My first post</a></h2>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non deserunt
-        et sed ipsam cumque, officia quam provident. Nemo nihil provident minima
-        distinctio, debitis deleniti modi.
-      </p>
+      <time datetime="">Published: {{post.published_date}}</time>
+      <h2><a href="">{{post.title}}</a></h2>
+      <p>{{post.text |linebreaksbr}}</p>
     </article>
-    <article>
-      <time datetime="">published: 25.07.2025, 12:00</time>
-      <h2><a href="">My second post</a></h2>
-      <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
-        pariatur libero non nihil, fugiat sit neque molestiae accusamus, aliquid
-        dicta voluptatem itaque consequuntur eius perspiciatis.
-      </p>
-    </article>
+    {% endfor %}
   </body>
 </html>
